--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -47,7 +47,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_span="2"
                     android:gravity="center_horizontal"
-                    android:text="about this app"
+                    android:text="About this app"
                     android:textColor="@color/black"
                     android:textSize="25sp"
                     android:textStyle="bold" />
